--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "homepage":"https://waynenguyen1302.github.io/wayne-portfolio/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
