--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "d3-ease": "^3.0.1",
+    "framer-motion": "^7.6.15",
     "gsap": "^3.11.3",
+    "gsap-trial": "^3.11.3",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "react-leaflet": "^4.1.0",
     "react-loaders": "^3.0.1",
     "react-particles": "^2.5.3",
     "react-router-dom": "^6.4.3",
     "react-safe": "^1.3.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.0.0-rc.3",
     "react-tsparticles": "^2.5.3",
     "sass": "^1.56.1",
     "simplex-noise": "^4.0.1",
