--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
     "animate.css": "^4.1.1",
     "d3-ease": "^3.0.1",
-    "framer-motion": "^7.6.15",
     "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
@@ -24,12 +24,11 @@
     "react-router-dom": "^6.4.3",
     "react-safe": "^1.3.0",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.0.0-rc.3",
-    "react-tsparticles": "^2.5.3",
+    "react-window": "^1.8.10",
     "sass": "^1.56.1",
     "simplex-noise": "^4.0.1",
     "TagCloud": "^2.2.0",
-    "tsparticles": "^2.5.3",
+    "tsparticles": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
